--- a/Programs/Assignment-3 Programs/problem-1.ipynb
+++ b/Programs/Assignment-3 Programs/problem-1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 157,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 158,
    "metadata": {},
    "outputs": [
     {
@@ -520,7 +520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 159,
    "metadata": {},
    "outputs": [
     {
@@ -1025,7 +1025,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 160,
    "metadata": {},
    "outputs": [
     {
@@ -1055,7 +1055,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 161,
    "metadata": {},
    "outputs": [
     {
@@ -1075,7 +1075,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 162,
    "metadata": {},
    "outputs": [
     {
@@ -1106,7 +1106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 163,
    "metadata": {},
    "outputs": [
     {
@@ -1124,7 +1124,7 @@
        "-2.876876685651715"
       ]
      },
-     "execution_count": 148,
+     "execution_count": 163,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1155,9 +1155,9 @@
     "bayes_constant  = mu_2 - bayes_coeff @ mu_1 \n",
     "print(bayes_coeff.shape)\n",
     "def bayes_predictor(bayes_coef, X_test, bayes_constant):\n",
-    "    return X_test @ bayes_coef.T + \n",
+    "    return X_test @ bayes_coef.T + bayes_constant\n",
     "\n",
-    "y_pred = bayes_predictor(bayes_coeff, X_train)\n",
+    "y_pred = bayes_predictor(bayes_coeff, X_train, bayes_constant)\n",
     "metrics.explained_variance_score(y_train, y_pred)"
    ]
   },
